Fix education date spacing

--- a/style.css
+++ b/style.css
@@ -190,8 +190,11 @@ h2 {
 .list-item p.date {
   display: inline-block;
   width: 10em;
+  min-width: 10em;
   color: #a0a8b0;
   margin-right: 1em;
+  white-space: nowrap;
+  vertical-align: top;
 }
 
 /**************************************************/
